# ArchiDAISIE

./: .Rhistory  .gitignore  .travis.yml  1_isl_parameters.txt  ArchiDAISIE.cpp  ArchiDAISIE.h  ArchiDAISIE.pro  ArchiDAISIE_expectations_ideas.docx  ArchiMainSource.cpp  ArchiMainSource_mig_divided_by_nIsl-1.cpp  Archipelago.cpp  Archipelago.h  CMakeLists.txt  DrawEvents.cpp  DrawEvents.h  Island.cpp  Island.h  Island_mig_divided_by_nIsl-1.cpp  LICENSE  MaxSpeciesID.cpp  MaxSpeciesID.h  README.md  STT.cpp  STT.h  STTtable.cpp  STTtable.h  Species.cpp  Species.h  SpeciesID.cpp  SpeciesID.h  buildup_of_model_pars.txt  buildup_of_model_pars_global.txt  buildup_of_model_pars_local.txt  do_oclint  event.h  event_type.cpp  event_type.h  extreme_mig&high_ana_l.txt  free_functions.cpp  free_functions.h  (+10 more)
R_scripts/: .Rhistory  pipeline_to_DAISIE.R  pipeline_to_DAISIE_STT.R  pipeline_to_DAISIE_branching.R  pipeline_to_DAISIE_branching1.R  pipeline_to_DAISIE_branching2.R  pipeline_to_DAISIE_branching3.R
R_scripts_pipeline/: .RData  .Rhistory  pipeline_STT_buildup.R  pipeline_STT_buildup_ylim.R  pipeline_to_DAISIE_STT.R  pipeline_to_DAISIE_STT_more_pars.R  pipeline_to_DAISIE_STT_more_pars_ylim.R  pipeline_to_DAISIE_STT_ylim.R  pipeline_to_DAISIE_branching.R  pipeline_to_DAISIE_branching1.R  pipeline_to_DAISIE_branching2.R  pipeline_to_DAISIE_branching3.R
cluster/: ArchiDAISIE.cpp  ArchiDAISIE.h  ArchiMainSource.cpp  Archipelago.cpp  Archipelago.h  DrawEvents.cpp  Island.cpp  STT.cpp  STT.h  STTtable.cpp  STTtable.h  Species.cpp  Species.h  SpeciesID.cpp  SpeciesID.h  event_type.cpp  event_type.h  free_functions.cpp  free_functions.h  parameter_sets.txt  testMulti.txt  (+2 more)
(+16760 files in other folders)
